# py-metin-clicker

./: .gitignore  README.md  pyproject.toml
app/: bot.py  constants.py  draw.py  drawer.py  find.py  finder.py  finder_tester.py  gui.py  hsvfilter.py  main.py  runner.py  screenshot.py  screenshotter.py  test.py  tester.py  utils.py  windowcapture.py  windowcapturer.py  windowcapturer2.py
