[project]
name = "py-metin-clicker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "mss>=10.1.0",
    "mypy>=1.17.1",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.11.7",
    "pydirectinput>=1.0.4",
    "pytest>=8.4.1",
    "pywin32>=311",
    "ruff>=0.12.11",
]
